--- a/BCX_Wallet/module_asset/src/main/res/values/colors.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="color_5E68D3">#5E68D3</color>
     <color name="color_2FC49F">#2FC49F</color>
     <color name="color_4B4BD9">#4B4BD9</color>
+    <color name="color_ACAFB6">#ACAFB6</color>
 </resources>
