--- a/BCX_Wallet/module_asset/src/main/res/layout/fragment_all_nh_order.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/fragment_all_nh_order.xml
@@ -46,7 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dp_24"
-                    android:text="@string/no_asset_data" />
+                    android:text="@string/no_asset_order" />
             </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
