--- a/BCX_Wallet/module_asset/src/main/res/values/colors.xml
+++ b/BCX_Wallet/module_asset/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="color_2FC49F">#2FC49F</color>
     <color name="color_4B4BD9">#4B4BD9</color>
     <color name="color_ACAFB6">#ACAFB6</color>
+    <color name="color_f8f8f8">#f8f8f8</color>
 </resources>
