--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_nh_asset_detaiil.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_nh_asset_detaiil.xml
@@ -224,16 +224,10 @@
                         </LinearLayout>
                     </LinearLayout>
 
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="0.5dp"
-                        android:layout_marginTop="@dimen/dp_26"
-                        android:background="@color/color_ffe8ebf1" />
-
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_26"
+                        android:layout_marginTop="@dimen/dp_15"
                         android:weightSum="5">
 
                         <TextView
@@ -264,8 +258,9 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="match_parent"
                         android:layout_marginTop="@dimen/dp_15"
+                        android:paddingBottom="@dimen/dp_48"
                         android:weightSum="5">
 
                         <TextView
@@ -277,62 +272,22 @@
                             android:textColor="@color/color_626670"
                             android:textSize="@dimen/sp_14" />
 
-                        <LinearLayout
+                        <ScrollView
                             android:layout_width="0dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="@dimen/dp_80"
                             android:layout_weight="3.2"
+                            android:background="@color/color_f8f8f8"
+                            android:fillViewport="true"
                             binding:onClickCommand="@{viewModel.baseDataCopyCommand}">
 
                             <TextView
-                                android:layout_width="wrap_content"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:ellipsize="middle"
-                                android:singleLine="true"
                                 android:text="@={viewModel.baseDescription}"
                                 android:textColor="@color/color_262A33"
                                 android:textSize="@dimen/sp_14" />
-
-                            <ImageView
-                                android:layout_width="@dimen/dp_20"
-                                android:layout_height="@dimen/dp_20"
-                                android:layout_marginLeft="@dimen/dp_6"
-                                android:src="@drawable/copy_black_icon" />
-                        </LinearLayout>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/dp_15"
-                        android:paddingBottom="@dimen/dp_48"
-                        android:weightSum="5">
-
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1.8"
-                            android:text="@string/module_mine_nh_asset_zone_data"
-                            android:textColor="@color/color_626670"
-                            android:textSize="@dimen/sp_14" />
-
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="3.2"
-                            binding:onClickCommand="@{viewModel.zoneDataCopyCommand}">
-
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:ellipsize="middle"
-                                android:singleLine="true"
-                                android:text="@={viewModel.zoneData}"
-                                android:textColor="@color/color_262A33"
-                                android:textSize="@dimen/sp_14" />
-
-                        </LinearLayout>
-
+                        </ScrollView>
                     </LinearLayout>
 
                 </LinearLayout>
