--- a/BCX_Wallet/module_mine/src/main/res/values/colors.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/colors.xml
@@ -15,4 +15,5 @@
     <color name="color_ffe8ebf1">#ffe8ebf1</color>
     <color name="color_F5B251">#F5B251</color>
     <color name="color_E8EBF1">#E8EBF1</color>
+    <color name="color_f8f8f8">#f8f8f8</color>
 </resources>
