--- a/BCX_Wallet/module_login/src/main/res/layout/activity_key_login.xml
+++ b/BCX_Wallet/module_login/src/main/res/layout/activity_key_login.xml
@@ -23,14 +23,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="@dimen/dp_16"
-                android:layout_height="@dimen/dp_16"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp_11"
-                android:src="@drawable/arrow_left_black"
-                binding:onClickCommand="@{viewModel.backOnClickCommand}" />
+                android:paddingStart="@dimen/dp_11"
+                android:paddingRight="@dimen/dp_16"
+                binding:onClickCommand="@{viewModel.backOnClickCommand}">
 
+                <ImageView
+                    android:layout_width="@dimen/dp_16"
+                    android:layout_height="@dimen/dp_18"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/arrow_left_black" />
+            </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
