--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_edit_contact.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_edit_contact.xml
@@ -22,15 +22,20 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <ImageView
-                android:layout_width="@dimen/dp_16"
-                android:layout_height="@dimen/dp_16"
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/dp_11"
-                android:background="@drawable/arrow_left_black"
                 android:paddingStart="@dimen/dp_11"
-                android:paddingEnd="@dimen/dp_20"
-                binding:onClickCommand="@{viewModel.backOnClickCommand}" />
+                android:paddingRight="@dimen/dp_16"
+                binding:onClickCommand="@{viewModel.backOnClickCommand}">
+
+                <ImageView
+                    android:layout_width="@dimen/dp_16"
+                    android:layout_height="@dimen/dp_18"
+                    android:scaleType="centerInside"
+                    android:src="@drawable/arrow_left_black" />
+            </LinearLayout>
 
             <TextView
                 android:layout_width="wrap_content"
