--- a/BCX_Wallet/module_asset/src/main/res/layout/fragment_mine_nh_order.xml
+++ b/BCX_Wallet/module_asset/src/main/res/layout/fragment_mine_nh_order.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:binding="http://schemas.android.com/apk/res-auto"
+    xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="ResourceName">
 
@@ -49,19 +50,36 @@
                     android:text="@string/no_asset_order" />
             </LinearLayout>
 
-            <android.support.v7.widget.RecyclerView
-                style="@style/CommonList"
+            <in.srain.cube.views.ptr.PtrFrameLayout
+                android:id="@+id/ptr_frame_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fastScrollEnabled="false"
-                android:overScrollMode="never"
-                android:paddingTop="@dimen/dp_15"
-                android:paddingBottom="@dimen/dp_22"
-                android:visibility="@{viewModel.recyclerViewVisible}"
-                binding:adapter="@{viewModel.adapter}"
-                binding:itemBinding="@{viewModel.itemBinding}"
-                binding:items="@{viewModel.observableList}"
-                binding:layoutManager="@{LayoutManagers.linear(LinearLayoutManager.VERTICAL,Boolean.FALSE)}" />
+
+                cube_ptr:ptr_duration_to_back_footer="1000"
+                cube_ptr:ptr_duration_to_back_header="1000"
+                cube_ptr:ptr_duration_to_close_footer="200"
+                cube_ptr:ptr_duration_to_close_header="200"
+                cube_ptr:ptr_keep_header_when_refresh="true"
+                cube_ptr:ptr_pull_to_fresh="false"
+
+                cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
+                cube_ptr:ptr_resistance_footer="1.3"
+                cube_ptr:ptr_resistance_header="1.7">
+
+                <android.support.v7.widget.RecyclerView
+                    style="@style/CommonList"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:fastScrollEnabled="false"
+                    android:overScrollMode="never"
+                    android:paddingTop="@dimen/dp_15"
+                    android:paddingBottom="@dimen/dp_22"
+                    android:visibility="@{viewModel.recyclerViewVisible}"
+                    binding:adapter="@{viewModel.adapter}"
+                    binding:itemBinding="@{viewModel.itemBinding}"
+                    binding:items="@{viewModel.observableList}"
+                    binding:layoutManager="@{LayoutManagers.linear(LinearLayoutManager.VERTICAL,Boolean.FALSE)}" />
+            </in.srain.cube.views.ptr.PtrFrameLayout>
         </RelativeLayout>
     </LinearLayout>
 </layout>
