--- a/BCX_Wallet/module_mine/src/main/res/layout/activity_nh_asset_detaiil.xml
+++ b/BCX_Wallet/module_mine/src/main/res/layout/activity_nh_asset_detaiil.xml
@@ -267,7 +267,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginTop="@dimen/dp_15"
-                        android:paddingBottom="@dimen/dp_48"
+                        android:paddingBottom="@dimen/dp_20"
                         android:weightSum="5">
 
                         <TextView
@@ -281,16 +281,16 @@
 
                         <ScrollView
                             android:layout_width="0dp"
-                            android:layout_height="@dimen/dp_80"
+                            android:layout_height="@dimen/dp_100"
                             android:layout_weight="3.2"
                             android:background="@color/color_f8f8f8"
-                            android:fillViewport="true"
                             binding:onClickCommand="@{viewModel.baseDataCopyCommand}">
 
                             <TextView
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:ellipsize="middle"
+                                android:lineSpacingExtra="1.5dp"
+                                android:padding="@dimen/dp_3"
                                 android:text="@={viewModel.baseDescription}"
                                 android:textColor="@color/color_262A33"
                                 android:textSize="@dimen/sp_14" />
