--- a/BCX_Wallet/module_mine/src/main/res/values/dimens.xml
+++ b/BCX_Wallet/module_mine/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
     <dimen name="dp_48">48dp</dimen>
     <dimen name="sp_10">10sp</dimen>
     <dimen name="dp_76">76dp</dimen>
+    <dimen name="dp_90">90dp</dimen>
 </resources>
